corpus/enum.txt
================================================================================
Option
================================================================================

syntax = "proto3";

enum EnumAllowingAlias {
  option allow_alias = true;
  UNKNOWN = 0;
  STARTED = 1;
  RUNNING = 2 [(custom_option) = "hello world"];

  reserved 4 to 6;
}

--------------------------------------------------------------------------------

(source_file
  (syntax)
  (enum
    (enum_name
      (identifier))
    (enum_body
      (option
        (identifier)
        (bool
          (true)))
      (enum_field
        (identifier)
        (int_lit
          (octal_lit)))
      (enum_field
        (identifier)
        (int_lit
          (decimal_lit)))
      (enum_field
        (identifier)
        (int_lit
          (decimal_lit))
        (enum_value_option
          (full_ident
            (identifier))
          (string)))
      (reserved
        (ranges
          (range
            (int_lit
              (decimal_lit))
            (int_lit
              (decimal_lit))))))))
